crates/cribo/tests/snapshots/requirements@circular_import_function_reference.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/circular_import_function_reference/main.py
---
packages: []
count: 0
