crates/cribo/tests/snapshots/requirements@circular_symbol_usage.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/circular_symbol_usage/main.py
---
packages: []
count: 0
