crates/cribo/tests/snapshots/requirements@collections_abc_test.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/collections_abc_test/main.py
---
packages: []
count: 0
