crates/cribo/tests/snapshots/requirements@collections_mixed_imports.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/collections_mixed_imports/main.py
---
packages: []
count: 0
