crates/cribo/tests/snapshots/requirements@conditional_exports.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/conditional_exports/main.py
---
packages:
  - simplejson
count: 1
