crates/cribo/tests/snapshots/requirements@conditional_imports.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/conditional_imports/main.py
---
packages:
  - cElementTree
  - lxml
  - simplejson
count: 3
