crates/cribo/tests/snapshots/requirements@conditional_wildcard_import.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/conditional_wildcard_import/main.py
---
packages: []
count: 0
