crates/cribo/tests/snapshots/requirements@cross-package-mixed-import.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/cross-package-mixed-import/main.py
---
packages: []
count: 0
